--- a/haskell/haskell.cabal
+++ b/haskell/haskell.cabal
@@ -33,6 +33,9 @@ executable haskell
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.14.1.0
+    build-depends:    
+        base ^>=4.14.1.0,
+        vector ^>=0.12.3.0
     hs-source-dirs:   app
     default-language: Haskell2010
+    ghc-options:      -Wall
