--- a/haskell/haskell.cabal
+++ b/haskell/haskell.cabal
@@ -35,7 +35,8 @@ executable haskell
     -- other-extensions:
     build-depends:    
         base ^>=4.14.1.0,
-        vector ^>=0.12.3.0
+        vector ^>=0.12.3.0,
+        multiset ^>=0.3.4.3
     hs-source-dirs:   app
     default-language: Haskell2010
     ghc-options:      -Wall
